# tachyon-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
bench/: aes_gcm.rs  chacha20_poly1305.rs  md5.rs  sha1.rs  sha512.rs
instr_hex/: Cargo.toml
instr_hex/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
src/crypto/: chacha20_poly1305.rs  hkdf.rs  hmac.rs  mod.rs
src/crypto/aes/: arm.rs  dynamic.rs  mod.rs  soft.rs  x86.rs  x86_avx.rs  x86_avx512.rs
src/crypto/aes/soft/: fixslicing32.rs  fixslicing64.rs  mod.rs
src/crypto/cbc/: mod.rs
src/crypto/chacha20/: mod.rs  soft.rs  x86.rs  x86_avx2.rs  x86_avx512.rs
src/crypto/ctr/: mod.rs
src/crypto/ecb/: mod.rs
src/crypto/gcm/: mod.rs
src/crypto/ghash/: aarch64.rs  arm.rs  dynamic.rs  mod.rs  soft.rs  x86.rs  x86_avx.rs  x86_avx2.rs  x86_avx512.rs
src/crypto/hash/: mod.rs
src/crypto/hash/blake3/: aarch64.rs  dynamic.rs  mod.rs  soft.rs  x86_avx.rs  x86_avx2.rs  x86_avx512.rs  x86_ssse3.rs
src/crypto/hash/md5/: mod.rs  soft.rs
src/crypto/hash/sha1/: arm.rs  arm_ni.rs  dynamic.rs  mod.rs  soft.rs  x86.rs  x86_avx.rs  x86_bmi.rs  x86_sse.rs
src/crypto/hash/sha256/: arm.rs  arm_ni.rs  dynamic.rs  mod.rs  soft.rs  x86_avx.rs  x86_avx_bmi.rs  x86_ni.rs  x86_ssse3.rs
src/crypto/hash/sha512/: aarch64.rs  aarch64_ni.rs  dynamic.rs  mod.rs  soft.rs  x86.rs  x86_avx.rs  x86_avx_bmi.rs
src/crypto/poly1305/: mod.rs  x86_avx512.rs
src/encoding/base64/: arm.rs  mod.rs  soft.rs  x86.rs
src/memory/: mod.rs
src/string/: lowercase.rs  mod.rs  uppercase.rs
src/utils/: alloc.rs  android.rs  bench.rs  black_box.rs  cpu_name.rs  disjoint_bitor.rs  int_traits.rs  memory.rs  mod.rs  num_traits.rs  xor.rs
