[package]
name = "tachyon"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = "fat"
panic = "abort"
opt-level = 3
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1
rpath = false

[features]
default = []
nightly = []
disable_dynamic_export = []
variable_time_eq = []

[dependencies]
cfg-if = "1.0.0"
unsafe_target_feature = "*"
libc = "*"
tachyon-macros = { path = "./macros" }

[build-dependencies]
rustc_version = "*"

[dev-dependencies]
criterion = { version = "*", default-features = false }
ring = "*"

[[bench]]
name = "aes"
harness = false
path = "bench/aes.rs"
