[package]
name = "tachyon"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = "fat"
panic = "abort"
opt-level = 3
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1
rpath = false

[features]
default = []
nightly = []
disable_dynamic_export = []
variable_time_eq = []

[dependencies]
cfg-if = "1.0.0"
unsafe_target_feature = "*"
libc = "*"
tachyon-macros = { path = "./macros" }

[build-dependencies]
rustc_version = "*"

[dev-dependencies]
criterion = { version = "*", default-features = false }
ring = "*"
rand = "*"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(aes_compact)"]

[[bench]]
name = "aes_gcm"
harness = false
path = "bench/aes_gcm.rs"

[[bench]]
name = "chacha20_poly1305"
harness = false
path = "bench/chacha20_poly1305.rs"

[[bench]]
name = "sha1"
harness = false
path = "bench/sha1.rs"

[[bench]]
name = "sha512"
harness = false
path = "bench/sha512.rs"
